Fixed pill spacing issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -364,7 +364,6 @@
         -webkit-transform: rotate(-30deg);
         -moz-transform: rotate(-30deg);
         left: 36%;
-        top: 17%;
         z-index: -1;
       }
 
